--- a/AcquaSense React/src/pages/home/App.css
+++ b/AcquaSense React/src/pages/home/App.css
@@ -169,7 +169,7 @@ body {
 }
 
 .footer {
-    background-color: var(--logo-color);
+    background-color:  var(--nav-link-hover-bg-color);
     color: var(--text-color);
     text-align: center;
     padding: 1rem;
@@ -279,4 +279,69 @@ body {
     height: auto; /* Mantém a proporção da imagem */
     border-radius: 8px; /* Mantém o arredondamento das bordas */
     margin-left: -20px; /* Ajusta a margem esquerda para mover a imagem um pouco para a esquerda */
+}
+
+
+/* Estilização da div do banner */
+.banner {
+    width: 100%;
+    height: 300px; /* Defina a altura desejada para o banner */
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 20px;
+}
+
+.banner img {
+    width: 100%; /* A imagem ocupa toda a largura do contêiner */
+    height: 100%; /* A imagem ocupa toda a altura do contêiner */
+    object-fit: cover; /* Ajusta a imagem para cobrir o contêiner mantendo a proporção */
+    object-position: center; /* Centraliza a imagem no contêiner */
+}
+
+.banner-content {
+    position: absolute;
+    bottom: 20px; /* Ajuste conforme necessário */
+    left: 20px; /* Ajuste conforme necessário */
+    color: white; /* Cor do texto */
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.banner-content h2 {
+    margin: 0;
+    font-size: 24px;
+}
+
+.banner-content button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-top: 10px;
+}
+
+.banner-content button:hover {
+    background-color: #0056b3;
+}
+
+.banner-carousel {
+    width: 100%;
+    height: 400px; /* Ajuste a altura conforme necessário */
+    overflow: hidden;
+    position: relative;
+}
+
+.banner-slide {
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.banner-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Garante que a imagem cubra todo o espaço */
+    object-position: center; /* Centraliza a imagem */
 }
