--- a/acquasense/usuarios/templates/index.html
+++ b/acquasense/usuarios/templates/index.html
@@ -45,7 +45,7 @@
                             </ul>
                         </div>
                     </div>
-                    <p>Bem vindo de volta, <strong>Usuario</strong></p>
+                    <p>Bem vindo de volta, <strong>{{username}}</strong></p>
                     <button id="theme-toggle"><i class="fa-solid fa-moon"></i> Modo Escuro</button>
                 </div>
                 
