--- a/login.css
+++ b/login.css
@@ -413,3 +413,26 @@ form.sign-in-form {
     left: 50%;
   }
 }
+
+.indicators {
+    position: absolute;
+    bottom: 20px; /* Ajuste conforme necessário */
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 10px; /* Espaçamento entre as bolinhas */
+}
+
+.indicator {
+    width: 10px;
+    height: 10px;
+    background-color: gray;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.indicator.active {
+    background-color: white; /* Ou qualquer cor para o indicador ativo */
+}
+
