--- a/AcquaSense React/src/pages/home/App.css
+++ b/AcquaSense React/src/pages/home/App.css
@@ -508,3 +508,112 @@ button, a {
     font-family: 'Kanit', sans-serif;
     font-weight: 500;
 }
+
+
+
+/* Animação fade-in */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Animação slide-in */
+@keyframes slideIn {
+    from {
+        transform: translateX(-50%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/* Animação de pulsação */
+@keyframes pulse {
+    0%, 100% {
+        transform: scale(1);
+    }
+    50% {
+        transform: scale(1.1);
+    }
+}
+
+/* Aplicando as animações */
+.about {
+    animation: slideIn 1s ease-out forwards;
+}
+
+.about h2 {
+    animation: pulse 2s infinite;
+}
+
+.about p {
+    animation: fadeIn 2s ease-in forwards;
+}
+
+
+/* Animação zoom-in */
+@keyframes zoomIn {
+    from {
+        transform: scale(0.8);
+        opacity: 0;
+    }
+    to {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+/* Animação slide-in up */
+@keyframes slideInUp {
+    from {
+        transform: translateY(50%);
+        opacity: 0;
+    }
+    to {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/* Aplicando as animações */
+.services {
+    text-align: center;
+    padding: 50px 20px;
+}
+
+.services h2 {
+    animation: zoomIn 1s ease-out forwards;
+}
+
+.services p {
+    animation: fadeIn 1.5s ease-in forwards;
+}
+
+.services p {
+    animation: slideInUp 1.5s ease-in-out forwards;
+}
+
+/* Configuração geral para cada serviço */
+.services-item {
+    margin-top: 30px;
+    animation: slideInUp 1.5s ease-in-out forwards;
+}
+
+/* Efeito em cascata para os itens */
+.services-item:nth-child(1) {
+    animation-delay: 0.3s;
+}
+
+.services-item:nth-child(2) {
+    animation-delay: 0.6s;
+}
+
+.services-item:nth-child(3) {
+    animation-delay: 0.9s;
+}
