--- a/AcquaSense React/src/pages/login/login.css
+++ b/AcquaSense React/src/pages/login/login.css
@@ -451,3 +451,18 @@ form.sign-in-form {
     padding: 0.2rem 0.6rem; /* Ajustar espaçamento em telas menores */
   }
 }
+
+.forgot-password {
+  display: block;
+  margin-top: 25px;
+  text-align: center;
+  font-size: 0.9rem;
+  color: #aaa;
+  text-decoration: none;
+}
+
+.forgot-password:hover {
+  color: #333;
+  text-decoration: underline;
+}
+
