--- a/AcquaSense React/src/pages/home/App.css
+++ b/AcquaSense React/src/pages/home/App.css
@@ -329,9 +329,9 @@ body {
 
 
 .banner-content button {
-    background-color: #007bff;
+    background-color: #bac7d2;
     color: #fff;
-    border: 4px solid #0056b3;
+    border: 1px solid #bac7d2;
     padding: 10px 20px;
     cursor: pointer;
     font-size: 16px;
