--- a/AcquaSense React/src/pages/home/App.css
+++ b/AcquaSense React/src/pages/home/App.css
@@ -49,19 +49,29 @@ body {
 .header {
     background-color: var(--header-bg-color);
     color: var(--text-color);
-    padding: 2rem;
+    padding: 0.5rem;
     text-align: center;
     border-bottom: 2px solid var(--header-border-color);
+}
+
+.header .logo {
+    height: 110px;
+    width: auto;
+    vertical-align: middle;
 }
 
 .header nav ul {
     list-style-type: none;
     padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .header nav ul li {
-    display: inline;
     margin: 0 1rem;
+    display: flex;
+    align-items: center;
 }
 
 .header nav ul li a {
@@ -76,6 +86,7 @@ body {
     background-color: var(--nav-link-hover-bg-color);
     color: var(--nav-link-hover-color);
 }
+
 
 .hero {
     background: linear-gradient(to right, var(--logo-color), var(--sidebar-bg-color));
