--- a/AcquaSense React/src/components/User/User.css
+++ b/AcquaSense React/src/components/User/User.css
@@ -47,3 +47,53 @@
   font-size: 16px;
   color: #555;
 }
+
+.profile-pic-container {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.profile-pic {
+  width: 150px; /* Aumenta o tamanho da foto de perfil */
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  border: 2px solid #007bff;
+  margin-bottom: 10px;
+}
+
+.profile-pic-placeholder {
+  width: 150px; /* Aumenta o tamanho do espaço reservado */
+  height: 150px;
+  border-radius: 50%;
+  border: 2px solid #007bff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #007bff;
+  background-color: #e9ecef;
+}
+
+.file-input {
+  display: block;
+  margin: 0 auto;
+}
+
+/* Dashboard related styles */
+
+.dashboard-container {
+  display: flex;
+}
+
+.dashboard-main-content {
+  flex: 1; /* Ocupa o restante do espaço */
+  padding: 20px;
+}
+
+.dashboard {
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 90px; /* Move o componente mais para baixo */
+  background-color: #fff; /* Cor de fundo para a área do dashboard */
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adiciona sombra ao dashboard */
+}
