--- a/AcquaSense React/src/components/User/User.css
+++ b/AcquaSense React/src/components/User/User.css
@@ -5,8 +5,7 @@
   background-color: #f5f5f5;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 800px;
-  margin: 0 auto;
+  width: 2500px;
 }
 
 .user-column {
@@ -91,9 +90,11 @@
 }
 
 .dashboard {
-  padding: 20px;
+  padding: 40px;
   border-radius: 8px;
   margin-top: 90px; /* Move o componente mais para baixo */
   background-color: #fff; /* Cor de fundo para a área do dashboard */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Adiciona sombra ao dashboard */
 }
+
+
