:new: feat: Página de Dashboard recebendo dados pelo BackEnd

--- a/AcquaSense React/src/pages/home/Home.css
+++ b/AcquaSense React/src/pages/home/Home.css
@@ -70,7 +70,7 @@ body {
 .no-hover:hover{
     background-color: transparent !important;
     color: inherit !important;
-    cursos: default;
+    cursor: default;
     pointer-events: none;
 
 }
