Sidebar sem scroll em todas as telas

--- a/AcquaSense React/src/components/AcquaNav/Header.css
+++ b/AcquaSense React/src/components/AcquaNav/Header.css
@@ -47,6 +47,7 @@ body {
 }
 
 .dashboard-sidebar {
+    position: fixed; /* Alterei o Posicionamento fixo */
     width: 340px; /* Muda o roxo do nome AcquaSense */
     background-color: var(--sidebar-bg-color);
     padding: 20px;
