--- a/AcquaSense React/src/pages/User/UserPage.css
+++ b/AcquaSense React/src/pages/User/UserPage.css
@@ -1,18 +1,20 @@
 .User-container {
-    display: flex;
-  }
-  
-  .dashboard-main-content {
-    flex: 1; /* Ocupa o restante do espaço */
-    padding: 20px;
-  }
-  
-  .dashboard {
-  
-    padding: 20px;
-    border-radius: 8px;
-    margin-top: 90px; /* Adicione esta linha para mover o componente mais para baixo */
-  
-  }
-  
-  
+  display: flex;
+  flex-direction: column; /* Alinha os componentes verticalmente */
+  justify-content: flex-start; /* Inicia o conteúdo do topo, mas permite espaço para o header */
+  align-items: stretch;
+  height: 100vh; /* Mantém a altura total da tela */
+}
+
+.dashboard-main-content {
+  flex: 1;
+  padding: 20px;
+}
+
+.dashboard {
+  padding: 20px;
+  border-radius: 8px;
+  margin-top: 90px;
+  height: calc(100vh - 180px); /* Ajustado para garantir que o conteúdo tenha um espaço confortável */
+  overflow-y: auto;
+}
