Ajustes no CSS para melhorar a exibição do JS

--- a/AcquaSense React/src/components/Configuracoes/Configu.css
+++ b/AcquaSense React/src/components/Configuracoes/Configu.css
@@ -97,7 +97,9 @@ body.dark-mode {
     padding-top: 20px; /* Ajuste este valor se necessário */
     padding-left: 350px;
     padding-right: 20px;
-    margin-top: -725px; /* Ajuste para trazer o conteúdo mais para cima */
+    margin-top: 50px; /* Ajuste para descer os contêineres */
+    z-index: 10; /* Garante que o contêiner fique na frente */
+    position: relative; /* Necessário para que o z-index funcione */
 }
 
 /* Estilos para o contêiner do botão */
